--- a/main.html
+++ b/main.html
@@ -67,10 +67,26 @@
         <button onclick="loadTrades()">Load Trades</button>
     </div>
 
+    <div id="filters-container" style="display:none;">
+        <select id="seasonSelect">
+            <option value="">All Seasons</option>
+        </select>
+        <select id="ownerSelect">
+            <option value="">All Owners</option>
+        </select>
+    </div>
+
     <div id="results"></div>
 
     <script src="players.js"></script>
     <script>
+        var allTrades = [];
+        var userMap = {};
+        var rosterMap = {};
+        var leagueMap = {};
+        seasonSelect.addEventListener('change', () => renderTrades());
+        ownerSelect.addEventListener('change', () => renderTrades());
+
         async function loadTrades() {
             const leagueId = document.getElementById('leagueId').value.trim();
             if (!leagueId) return alert('Please enter a league ID');
@@ -79,12 +95,13 @@
             resultsEl.innerHTML = 'Loading...';
 
             try {
+                // TODO separte user/rosters fetch
                 const users = await fetch(`https://api.sleeper.app/v1/league/${leagueId}/users`).then(r => r.json());
                 const rosters = await fetch(`https://api.sleeper.app/v1/league/${leagueId}/rosters`).then(r => r.json());
-                getAllLeagueIds(leagueId).then(console.log);
+                leagueMap = await getAllLeagueIds(leagueId); // { season -> leagueId }
 
                 // Step 1: Map user_id -> { display_name, team_name }
-                const userMap = {};
+                userMap = {};
                 users.forEach(user => {
                     userMap[user.user_id] = {
                         displayName: user.display_name,
@@ -93,7 +110,7 @@
                 });
 
                 // Step 2: Map roster_id -> { displayName, teamName }
-                const rosterMap = {};
+                rosterMap = {};
                 rosters.forEach(roster => {
                     // Usually, rosters have one owner, sometimes co_owners
                     const ownerId = roster.owner_id; // you could handle co_owners if needed
@@ -104,68 +121,115 @@
                     };
                 });
 
-                const allTrades = await getAllTrades(leagueId);
+                // Show the filters container
+                const filtersContainer = document.getElementById('filters-container');
+                filtersContainer.style.display = 'flex';
+                filtersContainer.style.gap = '10px';
+                filtersContainer.style.marginBottom = '20px';
 
-                if (allTrades.length === 0) {
-                    resultsEl.innerHTML = '<p>No trades found.</p>';
-                    return;
+                // Populate season dropdown
+                const seasonSelect = document.getElementById('seasonSelect');
+                seasonSelect.innerHTML = '<option value="">All Seasons</option>';
+                for (const season of Object.keys(leagueMap).sort((a, b) => b - a)) {
+                    seasonSelect.innerHTML += `<option value="${season}">${season}</option>`;
                 }
 
-                let html = '';
-                allTrades.forEach((t, i) => {
-                    html += `<div class="trade-card">`;
-                    html += `<h3>Trade #${i + 1}</h3>`;
-                    html += `<pre style="background:#eef;padding:10px;border-radius:6px;overflow:auto;">${JSON.stringify(t, null, 2)}</pre>`;
-
-                    const adds = t.adds || {};
-                    const draftPicks = t.draft_picks || [];
-                    const waivers = t.waiver_budget || [];
-
-                    const grouped = {};
-
-                    Object.entries(adds).forEach(([playerId, rosterId]) => {
-                        const p = players[playerId];
-                        const fullName = p?.full_name || p?.last_name || `Player ${playerId}`;
-                        grouped[rosterId] = grouped[rosterId] || [];
-                        grouped[rosterId].push(`received <em>${fullName}</em>`);
-                    });
-
-                    draftPicks.forEach(dp => {
-                        const receiver = dp.owner_id;
-                        const sender = dp.previous_owner_id;
-                        const label = `Pick ${dp.season} Round ${dp.round} (${rosterMap[dp.roster_id].displayName})`;
-                        grouped[receiver] = grouped[receiver] || [];
-                        grouped[receiver].push(`received <em>${label}</em>`);
-                    });
-
-                    // FAAB / waiver budget
-                    waivers.forEach(w => {
-                        const receiver = w.receiver;
-                        grouped[receiver] = grouped[receiver] || [];
-                        grouped[receiver].push(`received <em>$${w.amount} FAAB</em>`);
-                    });
-
-                    // Group by roster order from transaction for stable output
-                    t.roster_ids.forEach(rid => {
-                        if (!grouped[rid]) return;
-                        const userName = rosterMap[rid].teamName + " (" + rosterMap[rid].displayName + ")";
-                        html += `<div class="trade-entry"><strong>${userName}</strong><ul>`;
-                        grouped[rid].forEach(it => html += `<li>${it}</li>`);
-                        html += `</ul></div>`;
-                    });
-
-                    html += `</div>`;
+                // Populate owner dropdown
+                const ownerSelect = document.getElementById('ownerSelect');
+                ownerSelect.innerHTML = '<option value="">All Owners</option>';
+                Object.values(rosterMap).forEach(r => {
+                    ownerSelect.innerHTML += `<option value="${r.displayName}">${r.teamName} (${r.displayName})</option>`;
                 });
 
-                resultsEl.innerHTML = html;
+                allTrades = await getAllTrades(leagueMap);
+
+                renderTrades();
             } catch (err) {
                 console.error(err);
                 resultsEl.innerHTML = '<p>Error loading trades.</p>';
             }
         }
 
-        async function getAllTrades(startLeagueId) {
-            const leagueMap = await getAllLeagueIds(startLeagueId); // { season -> leagueId }
+        function renderTrades() {
+            const resultsEl = document.getElementById('results');
+            resultsEl.innerHTML = ''; // clear previous
+
+            // Apply filters
+            const selectedSeason = document.getElementById('seasonSelect').value;
+            const selectedOwner = document.getElementById('ownerSelect').value;
+
+            let filteredTrades = allTrades;
+
+            // Filter by season
+            if (selectedSeason) {
+                filteredTrades = filteredTrades.filter(t => t.season === selectedSeason);
+            }
+
+            // Filter by owner
+            if (selectedOwner) {
+                filteredTrades = filteredTrades.filter(t =>
+                    t.roster_ids.some(rid => rosterMap[rid]?.displayName === selectedOwner)
+                );
+            }
+
+            if (filteredTrades.length === 0) {
+                resultsEl.innerHTML = '<p>No trades found for selected filters.</p>';
+                return;
+            }
+
+            // Render trades
+            let html = '';
+            filteredTrades.forEach((t, i) => {
+                html += `<div class="trade-card">`;
+                html += `<h3>Trade #${i + 1} - Season ${t.season}</h3>`;
+                html += `<pre style="background:#eef;padding:10px;border-radius:6px;overflow:auto;">${JSON.stringify(t, null, 2)}</pre>`;
+
+                const adds = t.adds || {};
+                const draftPicks = t.draft_picks || [];
+                const waivers = t.waiver_budget || [];
+
+                const grouped = {};
+
+                // Add players
+                Object.entries(adds).forEach(([playerId, rosterId]) => {
+                    const p = players[playerId];
+                    const fullName = p?.full_name || p?.last_name || `Player ${playerId}`;
+                    grouped[rosterId] = grouped[rosterId] || [];
+                    grouped[rosterId].push(`received <em>${fullName}</em>`);
+                });
+
+                // Add draft picks
+                draftPicks.forEach(dp => {
+                    const receiver = dp.owner_id;
+                    const label = `Pick ${dp.season} Round ${dp.round} (${rosterMap[dp.roster_id]?.displayName || "Unknown"})`;
+                    grouped[receiver] = grouped[receiver] || [];
+                    grouped[receiver].push(`received <em>${label}</em>`);
+                });
+
+                // Add FAAB
+                waivers.forEach(w => {
+                    const receiver = w.receiver;
+                    grouped[receiver] = grouped[receiver] || [];
+                    grouped[receiver].push(`received <em>$${w.amount} FAAB</em>`);
+                });
+
+                // Group by roster_ids for consistent display
+                t.roster_ids.forEach(rid => {
+                    if (!grouped[rid]) return;
+                    const userName = rosterMap[rid]?.teamName + " (" + rosterMap[rid]?.displayName + ")";
+                    html += `<div class="trade-entry"><strong>${userName}</strong><ul>`;
+                    grouped[rid].forEach(it => html += `<li>${it}</li>`);
+                    html += `</ul></div>`;
+                });
+
+                html += `</div>`;
+            });
+
+            resultsEl.innerHTML = html;
+        }
+
+
+        async function getAllTrades(leagueMap) {
             const allTrades = [];
 
             for (const [season, leagueId] of Object.entries(leagueMap)) {
